Sticky Header 추가

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
 	<!-- Header -->
-	<header>
+	<header class="header">
 		<div class="inner">
 			<h1 class="logo">
 				<a href="index.html"><img src="./images/logo.png" alt=""></a>
@@ -48,6 +48,7 @@
 	<main>
 		<section id="main_view">
 			<div class="inner">
+				
 				<!-- 메인뷰 소개 글자 -->
 				<article class="intro">
 					<div class="intro_title">
@@ -62,6 +63,7 @@
 						<a href="javascript:void(0)">Github 바로가기</a>
 					</button>
 				</article>
+
 				<!-- 메인뷰 이미지 -->
 				<article class="intro_image">
 					<div class="computer_coding">
@@ -70,6 +72,7 @@
 						<div class="window"></div>
 					</div>
 				</article>
+
 				<!-- 스크롤다운 유도 -->
 				<div class="scroll_down">
 					<div class="scroll_line"></div>
@@ -153,7 +156,7 @@
 							</p>
 						</div>
 						<button class="btn" type="button">
-							<a href="javascript:void(0)">웹사이트 보기</a>
+							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</article>
@@ -184,7 +187,7 @@
 							</p>
 						</div>
 						<button class="btn" type="button">
-							<a href="javascript:void(0)">웹사이트 보기</a>
+							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</article>
@@ -215,7 +218,7 @@
 							</p>
 						</div>
 						<button class="btn" type="button">
-							<a href="http://skin-skin13.mklog.cafe24.com/">웹사이트 보기</a>
+							<a href="http://skin-skin13.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</article>
@@ -246,7 +249,7 @@
 							</p>
 						</div>
 						<button class="btn" type="button">
-							<a href="http://skin-skin10.mklog.cafe24.com/">웹사이트 보기</a>
+							<a href="http://skin-skin10.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</article>
@@ -277,7 +280,7 @@
 							</p>
 						</div>
 						<button class="btn" type="button">
-							<a href="javascript:void(0)">웹사이트 보기</a>
+							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</article>
