click to Scroll menu 추가

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			</h1>
 			<nav class="main_menu">
 				<ul>
-					<li><a href="#main_view">About</a></li>
-					<li><a href="#skills">Skills</a></li>
-					<li><a href="#works">Works</a></li>
+					<li data-page="main_view"><a href="javascript:void(0)">About</a></li>
+					<li data-page="skills"><a href="javascript:void(0)">Skills</a></li>
+					<li data-page="works"><a href="javascript:void(0)">Works</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -48,7 +48,7 @@
 	<main>
 		<section id="main_view">
 			<div class="inner">
-				
+
 				<!-- 메인뷰 소개 글자 -->
 				<article class="intro">
 					<div class="intro_title">
