scroll magic 추가

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/common.css">
-
-	<!-- 미디어쿼리 -->
-	<link href="./css/mediaquery.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="./css/mediaquery.css" />
 
 	<!-- Fonts-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +22,7 @@
 
 	<!-- ScrollMagic -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
 	<script defer src="./js/main.js"></script>
 </head>
 <body>
@@ -156,7 +155,7 @@
 								<span>HTML + CSS + JQuery</span>
 							</p>
 						</div>
-						<button class="btn" type="button">
+						<button class="btn btn-reverse" type="button">
 							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
@@ -292,5 +291,6 @@
 	<footer>
 		<p> &copy; <span class="this-year"></span> MINKYUNG. All Rights Reserved.</p>
 	</footer>
+
 </body>
 </html>
