--- a/index.html
+++ b/index.html
@@ -45,248 +45,248 @@
 
 
 	<!-- Main_view -->
-	<main>
-		<section id="main_view" data-num="0">
-			<div class="inner">
-
-				<!-- 메인뷰 소개 글자 -->
-				<article class="intro">
-					<div class="intro_title">
-						<p>Hello there. I'm</p>
-						<p class="intro_gradient">minkyung.</p>
-					</div>
-					<div class="intro_content">
-						<p>#web Design</p>
-						<p>#web Publishing</p>
-					</div>
-					<button class="btn" type="button">
-						<a href="javascript:void(0)">Github 바로가기</a>
-					</button>
-				</article>
-
-				<!-- 메인뷰 이미지 -->
-				<article class="intro_image">
-					<div class="computer_coding">
-						<img class="computer" src="./images/computer.svg" alt="computer">
-						<div class="coding"></div>
-						<div class="window"></div>
-					</div>
-				</article>
-
-				<!-- 스크롤다운 유도 -->
-				<div class="scroll_down">
-					<div class="scroll_line"></div>
+	<section id="main_view" data-num="0">
+		<div class="inner">
+			<!-- 메인뷰 소개 글자 -->
+			<article class="intro">
+				<div class="intro_title">
+					<p>Hello there. I'm</p>
+					<p class="intro_gradient">minkyung.</p>
 				</div>
-			</div>
-		</section>
+				<div class="intro_content">
+					<p>#web Design</p>
+					<p>#web Publishing</p>
+				</div>
+				<button class="btn" type="button">
+					<a href="javascript:void(0)">Github 바로가기</a>
+				</button>
+			</article>
 
-		<section id="skills" data-num="1" class="scroll-spy">
-			<div class="inner">
-				<h2>Skills</h2>
-				<article class="skills_intro back-to-position to-top delay-0">
-					<div class="skills_title">
-						<p>I love ceating a webesite</p>
+			<!-- 메인뷰 이미지 -->
+			<article class="intro_image">
+				<div class="computer_coding">
+					<img class="computer" src="./images/computer.svg" alt="computer">
+					<div class="coding"></div>
+					<div class="window"></div>
+				</div>
+			</article>
+
+			<!-- 스크롤다운 유도 -->
+			<div class="scroll_down">
+				<div class="scroll_line"></div>
+			</div>
+		</div>
+	</section>
+
+	<!-- SKILLS-->
+	<section id="skills" data-num="1" class="scroll-spy">
+		<div class="inner">
+			<h2>Skills</h2>
+			<article class="skills_intro back-to-position to-top delay-0">
+				<div class="skills_title">
+					<p>I love ceating a webesite</p>
+					<p>
+						<span class="design_tool">with</span>
+						<span class="dev_tool">and</span>
+					</p>
+				</div>
+			</article>
+
+			<article class="skills_content">
+				<div class="design_skill back-to-position to-top delay-1">
+					<h4><i class="fa-solid fa-bezier-curve"></i>Design</h4>
+					<ul>
+						<li>포토샵과 일러스트로 아이콘 등의 일러스트 디자인 작업을 할 수 있습니다.</li>
+						<li>어도비Xd와 피그마 툴을 이용하여 컴포넌트를 구성하여 UIUX 디자인합니다.</li>
+						<li>프로토타입을 만들어 웹사이트에서 필요한 동작효과를 표현할 수 있습니다.</li>
+					</ul>
+				</div>
+				<div class="dev_skill back-to-position to-top delay-2">
+					<h4><i class="fa-solid fa-laptop-code"></i>Publishing</h4>
+					<ul>
+						<li>웹표준과 웹접근성에 바탕을 두고 꼼꼼하게 마크업을 작성합니다.</li>
+						<li>유지보수를 고려한 코드를 작성하기 위해 노력하고 있습니다.</li>
+						<li>재밌는 인터렉션, 모션이 있는 웹사이트를 만들어 가고 싶습니다.</li>
+					</ul>
+				</div>
+			</article>
+
+			<article class="tools">
+				<ul >
+					<li class="back-to-position to-top delay-0"><img src="./images/logo/adobe-photoshop.svg" alt=""></li>
+					<li class="back-to-position to-top delay-1"><img src="./images/logo/adobe-illustrator.svg" alt=""></li>
+					<li class="back-to-position to-top delay-2"><img src="./images/logo/adobe-xd.svg" alt=""></li>
+					<li class="back-to-position to-top delay-3"><img src="./images/logo/figma-original.svg" alt=""></li>
+					<li class="back-to-position to-top delay-4"><img src="./images/logo/html-5.svg" alt=""></li>
+					<li class="back-to-position to-top delay-5"><img src="./images/logo/css-3.svg" alt=""></li>
+					<li class="back-to-position to-top delay-6"><img src="./images/logo/Sass.svg" alt=""></li>
+					<li class="back-to-position to-top delay-7"><img src="./images/logo/js-square.svg" alt=""></li>
+				</ul>
+			</article>
+		</div>
+	</section>
+
+	<!-- WORKS -->
+	<section id="works" data-num="2" class="scroll-spy">
+		<div class="inner">
+			<h2>Works</h2>
+			<!-- 프로젝트 1 -->
+			<article class="project project_01 back-to-position to-top">
+				<div class="project_number">01</div>
+				<div class="project_image">
+					<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+				</div>
+				<div class="project_content">
+					<div class="project_subject">
+						<h3 class="project_title">doggle-doggle</h3>
+						<p>애견용품 전문 사이트 / cafe24기반</p>
+					</div>
+					<div class="project_process">
 						<p>
-							<span class="design_tool">with</span>
-							<span class="dev_tool">and</span>
+							<h4>형식</h4>
+							<span class="project_cate">Responsive website</span>
+						</p>
+						<p>
+							<h4>기여도</h4>
+							<span>디자인 100% + 퍼블리싱 100%</span>
+						</p>
+						<p>
+							<h4>제작방식</h4>
+							<span>HTML + CSS + JQuery</span>
 						</p>
 					</div>
-				</article>
+					<button class="btn btn-reverse" type="button">
+						<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+					</button>
+				</div>
+			</article>
 
-				<article class="skills_content">
-					<div class="design_skill back-to-position to-top delay-1">
-						<h4><i class="fa-solid fa-bezier-curve"></i>Design</h4>
-						<ul>
-							<li>포토샵과 일러스트로 아이콘 등의 일러스트 디자인 작업을 할 수 있습니다.</li>
-							<li>어도비Xd와 피그마 툴을 이용하여 컴포넌트를 구성하여 UIUX 디자인합니다.</li>
-							<li>프로토타입을 만들어 웹사이트에서 필요한 동작효과를 표현할 수 있습니다.</li>
-						</ul>
+			<!-- 프로젝트 2 -->
+			<article class="project project_02 back-to-position to-top">
+				<div class="project_number">02</div>
+				<div class="project_image">
+					<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+				</div>
+				<div class="project_content">
+					<div class="project_subject">
+						<h3 class="project_title">doggle-doggle</h3>
+						<p>애견용품 전문 사이트 / cafe24기반</p>
 					</div>
-					<div class="dev_skill back-to-position to-top delay-2">
-						<h4><i class="fa-solid fa-laptop-code"></i>Publishing</h4>
-						<ul>
-							<li>웹표준과 웹접근성에 바탕을 두고 꼼꼼하게 마크업을 작성합니다.</li>
-							<li>유지보수를 고려한 코드를 작성하기 위해 노력하고 있습니다.</li>
-							<li>재밌는 인터렉션, 모션이 있는 웹사이트를 만들어 가고 싶습니다.</li>
-						</ul>
+					<div class="project_process">
+						<p>
+							<h4>형식</h4>
+							<span class="project_cate">Responsive website</span>
+						</p>
+						<p>
+							<h4>기여도</h4>
+							<span>디자인 100% + 퍼블리싱 100%</span>
+						</p>
+						<p>
+							<h4>제작방식</h4>
+							<span>HTML + CSS + JQuery</span>
+						</p>
 					</div>
-				</article>
+					<button class="btn btn-reverse" type="button">
+						<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+					</button>
+				</div>
+			</article>
 
-				<article class="tools">
-					<ul >
-						<li class="back-to-position to-top delay-0"><img src="./images/logo/adobe-photoshop.svg" alt=""></li>
-						<li class="back-to-position to-top delay-1"><img src="./images/logo/adobe-illustrator.svg" alt=""></li>
-						<li class="back-to-position to-top delay-2"><img src="./images/logo/adobe-xd.svg" alt=""></li>
-						<li class="back-to-position to-top delay-3"><img src="./images/logo/figma-original.svg" alt=""></li>
-						<li class="back-to-position to-top delay-4"><img src="./images/logo/html-5.svg" alt=""></li>
-						<li class="back-to-position to-top delay-5"><img src="./images/logo/css-3.svg" alt=""></li>
-						<li class="back-to-position to-top delay-6"><img src="./images/logo/Sass.svg" alt=""></li>
-						<li class="back-to-position to-top delay-7"><img src="./images/logo/js-square.svg" alt=""></li>
-					</ul>
-				</article>
-			</div>
-		</section>
+			<!-- 프로젝트 3 -->
+			<article class="project project_03 back-to-position to-top">
+				<div class="project_number">03</div>
+				<div class="project_image">
+					<img src="./images/website/plein doux.JPG" alt="plein doux website">
+				</div>
+				<div class="project_content">
+					<div class="project_subject">
+						<h3 class="project_title">plein doux</h3>
+						<p>까눌레 디저트 전문 사이트 / cafe24기반</p>
+					</div>
+					<div class="project_process">
+						<p>
+							<h4>형식</h4>
+							<span class="project_cate">Responsive website</span>
+						</p>
+						<p>
+							<h4>기여도</h4>
+							<span>디자인 100% + 퍼블리싱 100%</span>
+						</p>
+						<p>
+							<h4>제작방식</h4>
+							<span>HTML + CSS + JQuery</span>
+						</p>
+					</div>
+					<button class="btn btn-reverse" type="button">
+						<a href="http://skin-skin13.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
+					</button>
+				</div>
+			</article>
 
-		<section id="works" data-num="2" class="scroll-spy">
-			<div class="inner">
-				<h2>Works</h2>
-				<!-- 프로젝트 1 -->
-				<article class="project project_01 back-to-position to-top">
-					<div class="project_number">01</div>
-					<div class="project_image">
-						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+			<!-- 프로젝트 4 -->
+			<article class="project project_04 back-to-position to-top delay-0">
+				<div class="project_number">04</div>
+				<div class="project_image">
+					<img src="./images/website/H.Lighting.JPG" alt="H.Lighting website">
+				</div>
+				<div class="project_content">
+					<div class="project_subject">
+						<h3 class="project_title">H.Lighting</h3>
+						<p>조명 전문 사이트 / cafe24기반</p>
 					</div>
-					<div class="project_content">
-						<div class="project_subject">
-							<h3 class="project_title">doggle-doggle</h3>
-							<p>애견용품 전문 사이트 / cafe24기반</p>
-						</div>
-						<div class="project_process">
-							<p>
-								<h4>형식</h4>
-								<span class="project_cate">Responsive website</span>
-							</p>
-							<p>
-								<h4>기여도</h4>
-								<span>디자인 100% + 퍼블리싱 100%</span>
-							</p>
-							<p>
-								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
-							</p>
-						</div>
-						<button class="btn btn-reverse" type="button">
-							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
-						</button>
+					<div class="project_process">
+						<p>
+							<h4>형식</h4>
+							<span class="project_cate">Standard website</span>
+						</p>
+						<p>
+							<h4>기여도</h4>
+							<span>디자인 100% + 퍼블리싱 100%</span>
+						</p>
+						<p>
+							<h4>제작방식</h4>
+							<span>HTML + CSS + JQuery</span>
+						</p>
 					</div>
-				</article>
+					<button class="btn btn-reverse" type="button">
+						<a href="http://skin-skin10.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
+					</button>
+				</div>
+			</article>
 
-				<!-- 프로젝트 2 -->
-				<article class="project project_02 back-to-position to-top">
-					<div class="project_number">02</div>
-					<div class="project_image">
-						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+			<!-- 프로젝트 5 -->
+			<article class="project project_05 back-to-position to-top delay-0">
+				<div class="project_number">05</div>
+				<div class="project_image">
+					<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+				</div>
+				<div class="project_content">
+					<div class="project_subject">
+						<h3 class="project_title">doggle-doggle</h3>
+						<p>애견용품 전문 사이트 / cafe24기반</p>
 					</div>
-					<div class="project_content">
-						<div class="project_subject">
-							<h3 class="project_title">doggle-doggle</h3>
-							<p>애견용품 전문 사이트 / cafe24기반</p>
-						</div>
-						<div class="project_process">
-							<p>
-								<h4>형식</h4>
-								<span class="project_cate">Responsive website</span>
-							</p>
-							<p>
-								<h4>기여도</h4>
-								<span>디자인 100% + 퍼블리싱 100%</span>
-							</p>
-							<p>
-								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
-							</p>
-						</div>
-						<button class="btn" type="button">
-							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
-						</button>
+					<div class="project_process">
+						<p>
+							<h4>형식</h4>
+							<span class="project_cate">Standard website</span>
+						</p>
+						<p>
+							<h4>기여도</h4>
+							<span>디자인 100% + 퍼블리싱 100%</span>
+						</p>
+						<p>
+							<h4>제작방식</h4>
+							<span>HTML + CSS + JQuery</span>
+						</p>
 					</div>
-				</article>
-
-				<!-- 프로젝트 3 -->
-				<article class="project project_03 back-to-position to-top">
-					<div class="project_number">03</div>
-					<div class="project_image">
-						<img src="./images/website/plein doux.JPG" alt="plein doux website">
-					</div>
-					<div class="project_content">
-						<div class="project_subject">
-							<h3 class="project_title">plein doux</h3>
-							<p>까눌레 디저트 전문 사이트 / cafe24기반</p>
-						</div>
-						<div class="project_process">
-							<p>
-								<h4>형식</h4>
-								<span class="project_cate">Responsive website</span>
-							</p>
-							<p>
-								<h4>기여도</h4>
-								<span>디자인 100% + 퍼블리싱 100%</span>
-							</p>
-							<p>
-								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
-							</p>
-						</div>
-						<button class="btn" type="button">
-							<a href="http://skin-skin13.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
-						</button>
-					</div>
-				</article>
-
-				<!-- 프로젝트 4 -->
-				<article class="project project_04 back-to-position to-top delay-0">
-					<div class="project_number">04</div>
-					<div class="project_image">
-						<img src="./images/website/H.Lighting.JPG" alt="H.Lighting website">
-					</div>
-					<div class="project_content">
-						<div class="project_subject">
-							<h3 class="project_title">H.Lighting</h3>
-							<p>조명 전문 사이트 / cafe24기반</p>
-						</div>
-						<div class="project_process">
-							<p>
-								<h4>형식</h4>
-								<span class="project_cate">Standard website</span>
-							</p>
-							<p>
-								<h4>기여도</h4>
-								<span>디자인 100% + 퍼블리싱 100%</span>
-							</p>
-							<p>
-								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
-							</p>
-						</div>
-						<button class="btn" type="button">
-							<a href="http://skin-skin10.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
-						</button>
-					</div>
-				</article>
-
-				<!-- 프로젝트 5 -->
-				<article class="project project_05 back-to-position to-top delay-0">
-					<div class="project_number">05</div>
-					<div class="project_image">
-						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
-					</div>
-					<div class="project_content">
-						<div class="project_subject">
-							<h3 class="project_title">doggle-doggle</h3>
-							<p>애견용품 전문 사이트 / cafe24기반</p>
-						</div>
-						<div class="project_process">
-							<p>
-								<h4>형식</h4>
-								<span class="project_cate">Standard website</span>
-							</p>
-							<p>
-								<h4>기여도</h4>
-								<span>디자인 100% + 퍼블리싱 100%</span>
-							</p>
-							<p>
-								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
-							</p>
-						</div>
-						<button class="btn" type="button">
-							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
-						</button>
-					</div>
-				</article>
-			</div>
-		</section>
-	</main>
+					<button class="btn btn-reverse" type="button">
+						<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+					</button>
+				</div>
+			</article>
+		</div>
+	</section>
+	
 
 	<footer>
 		<p> &copy; <span class="this-year"></span> MINKYUNG. All Rights Reserved.</p>
