--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 	</section>
 
 	<!-- SKILLS-->
-	<section id="skills" data-num="1" class="scroll-spy">
+	<section id="skills" data-num="1">
 		<div class="inner">
 			<h2>Skills</h2>
-			<article class="skills_intro back-to-position to-top delay-0">
-				<div class="skills_title">
+			<article class="skills_intro scroll-spy">
+				<div class="skills_title back-to-position to-top delay-0">
 					<p>I love ceating a webesite</p>
 					<p>
 						<span class="design_tool">with</span>
@@ -92,7 +92,7 @@
 				</div>
 			</article>
 
-			<article class="skills_content">
+			<article class="skills_content scroll-spy">
 				<div class="design_skill back-to-position to-top delay-1">
 					<h4><i class="fa-solid fa-bezier-curve"></i>Design</h4>
 					<ul>
@@ -105,13 +105,13 @@
 					<h4><i class="fa-solid fa-laptop-code"></i>Publishing</h4>
 					<ul>
 						<li>웹표준과 웹접근성에 바탕을 두고 꼼꼼하게 마크업을 작성합니다.</li>
-						<li>유지보수를 고려한 코드를 작성하기 위해 노력하고 있습니다.</li>
-						<li>재밌는 인터렉션, 모션이 있는 웹사이트를 만들어 가고 싶습니다.</li>
+						<li>변수와 SCSS를 이용하여 유지보수를 고려한 스타일 코드를 작성하고 있습니다.</li>
+						<li>토글버튼, 클릭 이벤트 등의 간단한 JS 코드 작성과 라이브러리를 이용한 간단한 인터렉션 효과를 줄 수 있습니다.</li>
 					</ul>
 				</div>
 			</article>
 
-			<article class="tools">
+			<article class="tools scroll-spy">
 				<ul >
 					<li class="back-to-position to-top delay-0"><img src="./images/logo/adobe-photoshop.svg" alt=""></li>
 					<li class="back-to-position to-top delay-1"><img src="./images/logo/adobe-illustrator.svg" alt=""></li>
@@ -127,161 +127,171 @@
 	</section>
 
 	<!-- WORKS -->
-	<section id="works" data-num="2" class="scroll-spy">
+	<section id="works" data-num="2">
 		<div class="inner">
 			<h2>Works</h2>
 			<!-- 프로젝트 1 -->
-			<article class="project project_01 back-to-position to-top">
-				<div class="project_number">01</div>
-				<div class="project_image">
-					<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
-				</div>
-				<div class="project_content">
-					<div class="project_subject">
-						<h3 class="project_title">doggle-doggle</h3>
-						<p>애견용품 전문 사이트 / cafe24기반</p>
+			<article class="project project_01 scroll-spy">
+				<div class="project_container back-to-position to-top delay-0">
+					<div class="project_number">01</div>
+					<div class="project_image">
+						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
 					</div>
-					<div class="project_process">
-						<p>
-							<h4>형식</h4>
-							<span class="project_cate">Responsive website</span>
-						</p>
-						<p>
-							<h4>기여도</h4>
-							<span>디자인 100% + 퍼블리싱 100%</span>
-						</p>
-						<p>
-							<h4>제작방식</h4>
-							<span>HTML + CSS + JQuery</span>
-						</p>
+					<div class="project_content">
+						<div class="project_subject">
+							<h3 class="project_title">doggle-doggle</h3>
+							<p>애견용품 전문 사이트 / cafe24기반</p>
+						</div>
+						<div class="project_process">
+							<p>
+								<h4>형식</h4>
+								<span class="project_cate">Responsive website</span>
+							</p>
+							<p>
+								<h4>기여도</h4>
+								<span>디자인 100% + 퍼블리싱 100%</span>
+							</p>
+							<p>
+								<h4>제작방식</h4>
+								<span>HTML + CSS + JQuery</span>
+							</p>
+						</div>
+						<button class="btn btn-reverse" type="button">
+							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+						</button>
 					</div>
-					<button class="btn btn-reverse" type="button">
-						<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
-					</button>
 				</div>
 			</article>
 
 			<!-- 프로젝트 2 -->
-			<article class="project project_02 back-to-position to-top">
-				<div class="project_number">02</div>
-				<div class="project_image">
-					<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
-				</div>
-				<div class="project_content">
-					<div class="project_subject">
-						<h3 class="project_title">doggle-doggle</h3>
-						<p>애견용품 전문 사이트 / cafe24기반</p>
+			<article class="project project_02 scroll-spy">
+				<div class="project_container back-to-position to-top delay-0">
+					<div class="project_number">02</div>
+					<div class="project_image">
+						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
 					</div>
-					<div class="project_process">
-						<p>
-							<h4>형식</h4>
-							<span class="project_cate">Responsive website</span>
-						</p>
-						<p>
-							<h4>기여도</h4>
-							<span>디자인 100% + 퍼블리싱 100%</span>
-						</p>
-						<p>
-							<h4>제작방식</h4>
-							<span>HTML + CSS + JQuery</span>
-						</p>
+					<div class="project_content">
+						<div class="project_subject">
+							<h3 class="project_title">doggle-doggle</h3>
+							<p>애견용품 전문 사이트 / cafe24기반</p>
+						</div>
+						<div class="project_process">
+							<p>
+								<h4>형식</h4>
+								<span class="project_cate">Responsive website</span>
+							</p>
+							<p>
+								<h4>기여도</h4>
+								<span>디자인 100% + 퍼블리싱 100%</span>
+							</p>
+							<p>
+								<h4>제작방식</h4>
+								<span>HTML + CSS + JQuery</span>
+							</p>
+						</div>
+						<button class="btn btn-reverse" type="button">
+							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+						</button>
 					</div>
-					<button class="btn btn-reverse" type="button">
-						<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
-					</button>
 				</div>
 			</article>
 
 			<!-- 프로젝트 3 -->
-			<article class="project project_03 back-to-position to-top">
-				<div class="project_number">03</div>
-				<div class="project_image">
-					<img src="./images/website/plein doux.JPG" alt="plein doux website">
-				</div>
-				<div class="project_content">
-					<div class="project_subject">
-						<h3 class="project_title">plein doux</h3>
-						<p>까눌레 디저트 전문 사이트 / cafe24기반</p>
+			<article class="project project_03 scroll-spy">
+				<div class="project_container back-to-position to-top delay-0">
+					<div class="project_number">03</div>
+					<div class="project_image">
+						<img src="./images/website/plein doux.JPG" alt="plein doux website">
 					</div>
-					<div class="project_process">
-						<p>
-							<h4>형식</h4>
-							<span class="project_cate">Responsive website</span>
-						</p>
-						<p>
-							<h4>기여도</h4>
-							<span>디자인 100% + 퍼블리싱 100%</span>
-						</p>
-						<p>
-							<h4>제작방식</h4>
-							<span>HTML + CSS + JQuery</span>
-						</p>
+					<div class="project_content">
+						<div class="project_subject">
+							<h3 class="project_title">plein doux</h3>
+							<p>까눌레 디저트 전문 사이트 / cafe24기반</p>
+						</div>
+						<div class="project_process">
+							<p>
+								<h4>형식</h4>
+								<span class="project_cate">Responsive website</span>
+							</p>
+							<p>
+								<h4>기여도</h4>
+								<span>디자인 100% + 퍼블리싱 100%</span>
+							</p>
+							<p>
+								<h4>제작방식</h4>
+								<span>HTML + CSS + JQuery</span>
+							</p>
+						</div>
+						<button class="btn btn-reverse" type="button">
+							<a href="http://skin-skin13.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
+						</button>
 					</div>
-					<button class="btn btn-reverse" type="button">
-						<a href="http://skin-skin13.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
-					</button>
 				</div>
 			</article>
 
 			<!-- 프로젝트 4 -->
-			<article class="project project_04 back-to-position to-top delay-0">
-				<div class="project_number">04</div>
-				<div class="project_image">
-					<img src="./images/website/H.Lighting.JPG" alt="H.Lighting website">
-				</div>
-				<div class="project_content">
-					<div class="project_subject">
-						<h3 class="project_title">H.Lighting</h3>
-						<p>조명 전문 사이트 / cafe24기반</p>
+			<article class="project project_04 scroll-spy">
+				<div class="project_container back-to-position to-top delay-0">
+					<div class="project_number">04</div>
+					<div class="project_image">
+						<img src="./images/website/H.Lighting.JPG" alt="H.Lighting website">
 					</div>
-					<div class="project_process">
-						<p>
-							<h4>형식</h4>
-							<span class="project_cate">Standard website</span>
-						</p>
-						<p>
-							<h4>기여도</h4>
-							<span>디자인 100% + 퍼블리싱 100%</span>
-						</p>
-						<p>
-							<h4>제작방식</h4>
-							<span>HTML + CSS + JQuery</span>
-						</p>
+					<div class="project_content">
+						<div class="project_subject">
+							<h3 class="project_title">H.Lighting</h3>
+							<p>조명 전문 사이트 / cafe24기반</p>
+						</div>
+						<div class="project_process">
+							<p>
+								<h4>형식</h4>
+								<span class="project_cate">Standard website</span>
+							</p>
+							<p>
+								<h4>기여도</h4>
+								<span>디자인 100% + 퍼블리싱 100%</span>
+							</p>
+							<p>
+								<h4>제작방식</h4>
+								<span>HTML + CSS + JQuery</span>
+							</p>
+						</div>
+						<button class="btn btn-reverse" type="button">
+							<a href="http://skin-skin10.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
+						</button>
 					</div>
-					<button class="btn btn-reverse" type="button">
-						<a href="http://skin-skin10.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
-					</button>
 				</div>
 			</article>
 
 			<!-- 프로젝트 5 -->
-			<article class="project project_05 back-to-position to-top delay-0">
-				<div class="project_number">05</div>
-				<div class="project_image">
-					<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
-				</div>
-				<div class="project_content">
-					<div class="project_subject">
-						<h3 class="project_title">doggle-doggle</h3>
-						<p>애견용품 전문 사이트 / cafe24기반</p>
+			<article class="project project_05 scroll-spy">
+				<div class="project_container back-to-position to-top delay-0">
+					<div class="project_number">05</div>
+					<div class="project_image">
+						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
 					</div>
-					<div class="project_process">
-						<p>
-							<h4>형식</h4>
-							<span class="project_cate">Standard website</span>
-						</p>
-						<p>
-							<h4>기여도</h4>
-							<span>디자인 100% + 퍼블리싱 100%</span>
-						</p>
-						<p>
-							<h4>제작방식</h4>
-							<span>HTML + CSS + JQuery</span>
-						</p>
+					<div class="project_content">
+						<div class="project_subject">
+							<h3 class="project_title">doggle-doggle</h3>
+							<p>애견용품 전문 사이트 / cafe24기반</p>
+						</div>
+						<div class="project_process">
+							<p>
+								<h4>형식</h4>
+								<span class="project_cate">Standard website</span>
+							</p>
+							<p>
+								<h4>기여도</h4>
+								<span>디자인 100% + 퍼블리싱 100%</span>
+							</p>
+							<p>
+								<h4>제작방식</h4>
+								<span>HTML + CSS + JQuery</span>
+							</p>
+						</div>
+						<button class="btn btn-reverse" type="button">
+							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+						</button>
 					</div>
-					<button class="btn btn-reverse" type="button">
-						<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
-					</button>
 				</div>
 			</article>
 		</div>
