프로젝트 sweety 추가

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 					</div>
 					<div class="project_content">
 						<div class="project_subject">
-							<h3 class="project_title">doggle-doggle</h3>
-							<p>애견용품 전문 사이트 / cafe24기반</p>
+							<h3 class="project_title">sweety</h3>
+							<p>디저트 전문 사이트</p>
 						</div>
 						<div class="project_process">
 							<p>
@@ -186,11 +186,11 @@
 							</p>
 							<p>
 								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
+								<span>HTML + CSS + JS</span>
 							</p>
 						</div>
 						<button class="btn btn-reverse" type="button">
-							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+							<a href="https://mk-sweety.netlify.app/" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</div>
