프로젝트 이미지 수정

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				<div class="project_container back-to-position to-top delay-0">
 					<div class="project_number">02</div>
 					<div class="project_image">
-						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+						<img src="./images/website/sweety.png" alt="doggle-doggle website">
 					</div>
 					<div class="project_content">
 						<div class="project_subject">
@@ -196,43 +196,11 @@
 				</div>
 			</article>
 
+
 			<!-- 프로젝트 3 -->
 			<article class="project project_03 scroll-spy">
 				<div class="project_container back-to-position to-top delay-0">
 					<div class="project_number">03</div>
-					<div class="project_image">
-						<img src="./images/website/plein doux.JPG" alt="plein doux website">
-					</div>
-					<div class="project_content">
-						<div class="project_subject">
-							<h3 class="project_title">plein doux</h3>
-							<p>까눌레 디저트 전문 사이트 / cafe24기반</p>
-						</div>
-						<div class="project_process">
-							<p>
-								<h4>형식</h4>
-								<span class="project_cate">Responsive website</span>
-							</p>
-							<p>
-								<h4>기여도</h4>
-								<span>디자인 100% + 퍼블리싱 100%</span>
-							</p>
-							<p>
-								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
-							</p>
-						</div>
-						<button class="btn btn-reverse" type="button">
-							<a href="http://skin-skin13.mklog.cafe24.com/" target="_blank">웹사이트 보기</a>
-						</button>
-					</div>
-				</div>
-			</article>
-
-			<!-- 프로젝트 4 -->
-			<article class="project project_04 scroll-spy">
-				<div class="project_container back-to-position to-top delay-0">
-					<div class="project_number">04</div>
 					<div class="project_image">
 						<img src="./images/website/H.Lighting.JPG" alt="H.Lighting website">
 					</div>
@@ -262,10 +230,10 @@
 				</div>
 			</article>
 
-			<!-- 프로젝트 5 -->
-			<article class="project project_05 scroll-spy">
+			<!-- 프로젝트 4 -->
+			<article class="project project_04 scroll-spy">
 				<div class="project_container back-to-position to-top delay-0">
-					<div class="project_number">05</div>
+					<div class="project_number">04</div>
 					<div class="project_image">
 						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
 					</div>
