프로젝트1 추가

--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 				<div class="project_container back-to-position to-top delay-0">
 					<div class="project_number">01</div>
 					<div class="project_image">
-						<img src="./images/website/doggle-doggle.JPG" alt="doggle-doggle website">
+						<img src="./images/website/Seoulbustour.jpg" alt="doggle-doggle website">
 					</div>
 					<div class="project_content">
 						<div class="project_subject">
-							<h3 class="project_title">doggle-doggle</h3>
-							<p>애견용품 전문 사이트 / cafe24기반</p>
+							<h3 class="project_title">서울버스투어</h3>
+							<p>버스투어 전문 사이트</p>
 						</div>
 						<div class="project_process">
 							<p>
@@ -153,11 +153,11 @@
 							</p>
 							<p>
 								<h4>제작방식</h4>
-								<span>HTML + CSS + JQuery</span>
+								<span>HTML + CSS + JS</span>
 							</p>
 						</div>
 						<button class="btn btn-reverse" type="button">
-							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+							<a href="https://seoulbustour.netlify.app/" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</div>
