--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 							</p>
 						</div>
 						<button class="btn btn-reverse" type="button">
-							<a href="javascript:void(0)" target="_blank">웹사이트 보기</a>
+							<a href="https://mklog.cafe24.com/skin-skin5" target="_blank">웹사이트 보기</a>
 						</button>
 					</div>
 				</div>
